- Fixed: Devices could become invisible when a scene/group was added to the 'hidden devices' room plan with the same idx
- Fixed: JSon float/nan value, solved by upgrading JSonCPP
- Fixed: OZW, when a value is updated and the sensor did not exists before (for example a kWh sensor), it is created (saves a restart)
- Changed: Blinds T5 till T13 new DeviceID generation, could cause new sensors
- Changed: Minimized On/Off/Script execution time
- Changed: Wind Direction Graph, if sensor does not supports 'Gust', the 'Speed' value is used
- Changed: Temperature Only charts will not display the Humidity axis
- Implemented: Support for the Intergas InComfort LAN2RF Gateway
- Implemented: Added a new parameter to disable the logging of event script triggers 'Script event triggered: ...'
- Implemented: AppLamp/LimitLess bridge V6.0 RGBW/RGBWW
- Implemented: Blinds T1 till T13 new supports the Stop button
- Implemented: Devices, Log icon for Blinds
- Implemented: Blockly/Lua Set SetPoint option
- Implemented: I2C BME280 sensor (temp+hum+baro)
- Implemented: Netatmo Home Coach support
- Implemented: Notification for Dummy Soil/Moisture sensor
- Implemented: Notification for Alert Sensor via udevice JSON call
- Implemented: OpenWeatherMap, now supports coordinates and city locations
- Implemented: Option to replace an Meter device
- Implemented: RFXtrx Lucci Fan implemented
- Implemented: RFXtrx RFY2 protocol implemented
- Implemented: RFXtrx Kangtai / Cotech implemented
- Implemented: Timer Plan editor
- Implemented: Teleinfo : Added a switch indicating the current cost slot
- Removed: Razberry ZWave handling method. Existing users need to migrate to OpenZWave

Version 3.5878 (November 10th 2016)
- Fixes and various improvements

Version 3.5837 (October 30th 2016)
- Fixed: Blockly/Lua, FOR and RANDOM are now again in minutes
- Changed: Shortlog charts for Temperature, Current and Smartlog are now using a spline
- Changed: Lua/Blockly, Notifications are now not blocking
