@@ -3325,7 +3325,7 @@ uint64_t CSQLHelper::UpdateValueInt(const int HardwareID, const char* ID, const 
 		else
 		{
 			if (
-				(stype == STYPE_DoorLock) ||
+				(stype == STYPE_DoorContact) ||
 				(stype == STYPE_Contact)
 				)
 			{
@@ -3527,7 +3527,7 @@ uint64_t CSQLHelper::UpdateValueInt(const int HardwareID, const char* ID, const 
 						(switchtype == STYPE_Motion) ||
 						(switchtype == STYPE_Dimmer) ||
 						(switchtype == STYPE_PushOn) ||
-						(switchtype == STYPE_DoorLock) ||
+						(switchtype == STYPE_DoorContact) ||
 						(switchtype == STYPE_Selector)
 						)
 					{
